Fixed the modal h3 color because background too dark

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,9 @@ header {
   border-radius: 8px;
   padding-bottom: 20px;
 }
+.modal_title {
+  color: goldenrod;
+}
 
 /* Work Experience
 =========================================*/
